--- a/app.css
+++ b/app.css
@@ -110,6 +110,7 @@ p, label {
     position: absolute;
     bottom: 0;
     width: 100%;
+    height: 106px;
     padding: 0.8em 0.8em 1.8em;
     margin:0;
     box-sizing: border-box;
